[package]
name = "vos"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
axum = "0.8.3"
sea-orm = {version="1.1.10", features = ["sqlx-postgres", "runtime-tokio-rustls"]}
serde = "1.0.219"
time = "0.3.41"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-sessions = "0.14.0"
